--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,4 @@
-# Copyright 2023 Canonical Ltd.
+# Copyright 2024 Canonical Ltd.
 # See LICENSE file for licensing details.
 
 [tox]
@@ -7,10 +7,10 @@ skip_missing_interpreters = True
 envlist = lint, unit, static, coverage-report
 
 [vars]
-src_path = {toxinidir}/src/
-tst_path = {toxinidir}/tests/
+src_path = {toxinidir}/httprequest_lego_provider/
+tst_path = {toxinidir}/httprequest_lego_provider/tests/
 ;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
-all_path = {[vars]src_path} {[vars]tst_path}
+all_path = {[vars]src_path}
 
 [testenv]
 setenv =
@@ -47,6 +47,7 @@ deps =
     pep8-naming
     pydocstyle>=2.10
     pylint
+    pylint-django
     pyproject-flake8<6.0.0
     pytest
     pytest-asyncio
@@ -67,18 +68,18 @@ commands =
     isort --check-only --diff {[vars]all_path}
     black --check --diff {[vars]all_path}
     mypy {[vars]all_path}
-    pylint {[vars]all_path}
+    pylint --load-plugins=pylint_django --disable=django-not-configured {[vars]all_path}
 
 [testenv:unit]
 description = Run unit tests
 deps =
     coverage[toml]
     pytest
+    pytest-django
     -r{toxinidir}/requirements.txt
 commands =
-    coverage run --source={[vars]src_path} \
-        -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
-    coverage report
+    coverage run --source={[vars]src_path} --omit={[vars]tst_path}* \
+        -m pytest -v --tb native -s {posargs}
 
 [testenv:coverage-report]
 description = Create test coverage report
@@ -87,7 +88,7 @@ deps =
     pytest
     -r{toxinidir}/requirements.txt
 commands =
-    coverage report
+    coverage report -m
 
 [testenv:static]
 description = Run static analysis tests
@@ -96,27 +97,3 @@ deps =
     -r{toxinidir}/requirements.txt
 commands =
     bandit -c {toxinidir}/pyproject.toml -r {[vars]src_path} {[vars]tst_path}
-
-[testenv:integration]
-description = Run integration tests
-deps =
-    # Last compatible version with Juju 2.9
-    juju==3.0.4
-    pytest
-    pytest-asyncio
-    pytest-operator
-    -r{toxinidir}/requirements.txt
-commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
-
-[testenv:src-docs]
-allowlist_externals=sh
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}
-description = Generate documentation for src
-deps =
-    lazydocs
-    -r{toxinidir}/requirements.txt
-commands =
-    ; can't run lazydocs directly due to needing to run it on src/* which produces an invocation error in tox
-    sh generate-src-docs.sh
