--- a/.github/workflows/call.yaml
+++ b/.github/workflows/call.yaml
@@ -4,3 +4,9 @@ on:
 jobs:
   build:
     uses: ./.github/workflows/build.yaml
+    with:
+      rockcraft-repository: weiiwang01/rockcraft
+      rockcraft-ref: feat-12f-django
+      charmcraft-repository: weiiwang01/charmcraft
+      charmcraft-ref: feat-12f-django
+  
